# thesis_ambulance_optimization

./: .gitignore  bla.ipynb  jens_testing.ipynb  pyproject.toml  smart_lights.ipynb  test_plotten.ipynb
thesis_floor_halkes/: agent.py  critic_network.py  environment.py  environment_.py  graph_data.py  model_dynamic_attention.py  reinforce_baselines.py  train.py  train_simple.py  utils.py
thesis_floor_halkes/action/: base.py
thesis_floor_halkes/agent/: base.py  dynamic.py
thesis_floor_halkes/baselines/: base.py  critic_network.py
thesis_floor_halkes/batch/: agent_batch.py  environment_batch.py  graph_data_batch.py  model_batch.py  reinforce_baselines_batch.py  test_batch.ipynb  train_batch.py
thesis_floor_halkes/benchmarks/: experiment_benchmarks.ipynb  experiment_benchmarks.py  simulate_dijkstra.py  time_dependent_A*.py  time_dependent_A_star.py  time_dependent_dijkstra.py
thesis_floor_halkes/conf/: config.yaml
thesis_floor_halkes/data_processing/: build_data_object.py  clean_intersection_measurements.py  clean_intersection_metada.py  create_helmond_nodes_df.py  create_subgraph.py  create_training_data.py  expand_to_min_subgraph.py  get_all_nodes_with_trafficlights.py  increase_time_granularity.py  merge_streetmap_vri.py  merge_sub_timeseries.py  open_street_map_coords.py
thesis_floor_halkes/environment/: base.py  dynamic_ambulance.py
thesis_floor_halkes/model/: decoder.py  encoders.py
thesis_floor_halkes/network/: osmnx_test.ipynb  utils.py
thesis_floor_halkes/penalties/: base.py  calculator.py  penalty_utils.py  revisit_node_penalty.py
(+27 files in other folders)
